--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -16,6 +16,7 @@ jobs:
       - run: npm install
       - run: npm install get-json --save
       - run: npm install jsdom --save
+      - run: npm install firebase
       - run: node bot.js
 
   
