--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -16,7 +16,7 @@ jobs:
       - run: npm install
       - run: npm install get-json --save
       - run: npm install express --save
-      - run: npm install fb-messenger-bot-api --save
+      - run: npm install facebook-chat-api --save
       - run: node bot.js
 
   
